fixed textarea height, but need to fix element alignment

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -94,6 +94,7 @@ body {
     padding: 3em;
     font-family: 'Nobile', sans-serif;
     color: rgb(255,250,250); /* "snow" */
+    clear: all;
 }
 
 .form__label {
@@ -115,7 +116,8 @@ body {
 }
 
 .form__textArea {
-
+  width: 300px;
+  height: 150px;
 }
 
 .form__button {
@@ -124,7 +126,7 @@ body {
 }
 
 .selectMenu {
-    background-color: #F5D6C6; /*creme de peche*/
+    background-color: rgb(255,250,250); /* "snow" */
     padding: 8px 16px;
     border: 1px solid transparent;
     border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
